--- a/themes/dark/msgEdit/msgEdit.css
+++ b/themes/dark/msgEdit/msgEdit.css
@@ -1,9 +1,9 @@
 QTextEdit
 {
-    border-color: @lightGrey;
+    border-color: @groundExtra;
     border-style: solid;
     border-width: 1px 0 1px 1px;
-    background: #201f1f;
+    background: @groundBase;
 }
 
 QTextEdit:hover
