--- a/themes/dark/settings/mainContent.css
+++ b/themes/dark/settings/mainContent.css
@@ -1,25 +1,25 @@
 QTextEdit
 {
-    border-color: @lightGrey;
+    border-color: @groundExtra;
     border-style: solid;
     border-width: 1px 0 1px 1px;
-    background: #201f1f;
+    background: @groundBase;
     border: 1px solid #c4c1bd;
 }
 
 QListWidget
 {
-    background-color: #201f1f;
+    background-color: @groundBase;
 }
 
 QMessageBox
 {
-    background-color: #201f1f;
+    background-color: @groundBase;
 }
 
 QCheckBox
 {
-    color: #c3c3c3;
+    color: @mainText;
 }
 
 QCheckBox:disabled
@@ -29,7 +29,7 @@ QCheckBox:disabled
 
 QSpinBox
 {
-    background-color: #201f1f;
+    background-color: @groundBase;
 }
 
 QSpinBox:disabled
@@ -39,30 +39,30 @@ QSpinBox:disabled
 
 QGroupBox
 {
-    color: #c3c3c3;
-    background-color: #201f1f;
+    color: @mainText;
+    background-color: @groundBase;
     font: @bigBold;
 }
 
 QComboBox
 {
-    color: #c3c3c3;
-    background-color: #201f1f;
+    color: @mainText;
+    background-color: @groundBase;
 }
 
 QComboBox QAbstractItemView {
-    background-color: #201f1f;
+    background-color: @groundBase;
 }
 
 QLineEdit
 {
-    background-color: #201f1f;
+    background-color: @groundBase;
 }
 
 QLineEdit:disabled
 {
     background-color: #262424
-    color: #201f1f;
+    color: @groundBase;
 }
 
 QTabWidget
@@ -73,7 +73,7 @@ QTabWidget
 QTabBar::tab:selected 
 {
     background: #100f0f;
-    color: #c3c3c3;
+    color: @mainText;
 }
 
 QTabBar::tab:!selected 
@@ -84,7 +84,7 @@ QTabBar::tab:!selected
 
 QScrollArea
 {
-    background-color: #201f1f;
+    background-color: @groundBase;
 }
 
 QScrollArea > QWidget > QWidget
@@ -94,7 +94,7 @@ QScrollArea > QWidget > QWidget
 
 QScrollArea::corner
 {
-    background-color: #201f1f;
+    background-color: @groundBase;
     border: none;
 }
 
@@ -231,12 +231,12 @@ QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal
 
 QRadioButton
 {
-    background: #201f1f;
-    color: #c3c3c3;
+    background: @groundBase;
+    color: @mainText;
 }
 
 QPushButton
 {
     background: #323030;
-    color: #c3c3c3;
+    color: @mainText;
 }
