--- a/themes/dark/settings/mainHead.css
+++ b/themes/dark/settings/mainHead.css
@@ -1,5 +1,5 @@
 QWidget .QLabel, QWidget .QLineEdit
 {
-    color: #c3c3c3;
-    background: #201f1f;
+    color: @mainText;
+    background: @groundBase;
 }
