--- a/themes/dark/contentDialog/contentDialog.css
+++ b/themes/dark/contentDialog/contentDialog.css
@@ -1,16 +1,21 @@
 QSplitter
 {
-    color: white;
-    background-color: white;
-    alternate-background-color: white;
-    border-color: white;
-    gridline-color: white;
-    selection-color: white;
-    selection-background-color: white;
+    color: @groundExtra;
+    background-color: @groundExtra;
+    alternate-background-color: @groundExtra;
+    border-color: @groundExtra;
+    gridline-color: @groundExtra;
+    selection-color: @groundExtra;
+    selection-background-color: @groundExtra;
 }
 
 QSplitter:handle
 {
-    color: white;
-    background-color: white;
+    color: @groundExtra;
+    background-color: @groundExtra;
+}
+
+QWidget
+{
+    background: @groundBase;
 }
