--- a/themes/dark/loginScreen/loginScreen.css
+++ b/themes/dark/loginScreen/loginScreen.css
@@ -57,7 +57,7 @@ QStackedWidget QPushButton
     background: #589f4e;
 }
 
-QLabel
+QMessageBox, QLabel
 {
     color: @mainText;
     background: #100f0f;
