--- a/themes/dark/window/statusPanel.css
+++ b/themes/dark/window/statusPanel.css
@@ -79,7 +79,7 @@ QListView
 {
   background-color: @themeDark;
   font: @extraBig;
-  color: @groundBase;
+  color: @nameActive;
 }
 
 #statusPanel > #statusHead > #statusLabel
