--- a/themes/default/fileTransferInstance/filetransferWidget.css
+++ b/themes/default/fileTransferInstance/filetransferWidget.css
@@ -22,6 +22,6 @@ QProgressBar {
 }
 
 QProgressBar::chunk {
-        background-color: @groundExtra;
+        background-color: @transferMiddle;
 	width: 1px;
 }
