--- a/themes/dark/settings/mainContent.css
+++ b/themes/dark/settings/mainContent.css
@@ -22,9 +22,34 @@ QCheckBox
     color: @mainText;
 }
 
+QCheckBox::indicator {
+    width: 12px;
+    height: 12px;
+    border: 2px solid #514f4f;
+    border-radius: 2px;
+}
+
+QCheckBox::indicator:checked {
+    image: url("@getImagePath(settings/checkboxChecked.svg)");
+}
+
+QCheckBox::indicator:checked:pressed,
+QCheckBox::indicator:unchecked:pressed {
+    background: #514f4f;
+}
+
 QCheckBox:disabled
 {
     color: grey;
+}
+
+QCheckBox:indicator:disabled {
+    border: 2px solid #373535;
+    border-radius: 2px;
+}
+
+QCheckBox:indicator:checked:disabled {
+    image: url("@getImagePath(settings/checkboxCheckedDisabled.svg)");
 }
 
 QSpinBox, QDoubleSpinBox
