style: use css files for toxId

--- a/res.qrc
+++ b/res.qrc
@@ -105,6 +105,7 @@
         <file>themes/dark/fileTransferInstance/filetransferWidget.css</file>
         <file>themes/dark/genericChatForm/genericChatForm.css</file>
         <file>themes/dark/acceptCall/acceptCall.svg</file>
+        <file>themes/dark/addFriendForm/toxId.css</file>
         <file>themes/dark/rejectCall/rejectCall.svg</file>
         <file>themes/dark/notificationEdge/notificationEdge.css</file>
         <file>themes/dark/loginScreen/loginScreen.css</file>
@@ -169,6 +170,7 @@
         <file>themes/default/fileTransferInstance/filetransferWidget.css</file>
         <file>themes/default/genericChatForm/genericChatForm.css</file>
         <file>themes/default/acceptCall/acceptCall.svg</file>
+        <file>themes/default/addFriendForm/toxId.css</file>
         <file>themes/default/rejectCall/rejectCall.svg</file>
         <file>img/login_logo.svg</file>
         <file>themes/default/notificationEdge/notificationEdge.css</file>
