--- a/themes/default/contentDialog/contentDialog.css
+++ b/themes/default/contentDialog/contentDialog.css
@@ -14,3 +14,9 @@ QSplitter:handle
     color: white;
     background-color: white;
 }
+
+QWidget
+{
+    background: @groundBase;
+    color: @mainText;
+}
