style: edit style for QSplitter

--- a/themes/dark/window/general.css
+++ b/themes/dark/window/general.css
@@ -296,3 +296,9 @@ QPushButton
     background: #323030;
     color: @mainText;
 }
+
+QSplitter:handle
+{
+    color: @groundBase;
+    background-color: @groundBase;
+}
