--- a/themes/dark/contentDialog/contentDialog.css
+++ b/themes/dark/contentDialog/contentDialog.css
@@ -1,18 +1,7 @@
-QSplitter
-{
-    color: @groundExtra;
-    background-color: @groundExtra;
-    alternate-background-color: @groundExtra;
-    border-color: @groundExtra;
-    gridline-color: @groundExtra;
-    selection-color: @groundExtra;
-    selection-background-color: @groundExtra;
-}
-
 QSplitter:handle
 {
-    color: @groundExtra;
-    background-color: @groundExtra;
+    color: @groundBase;
+    background-color: @groundBase;
 }
 
 QWidget
