fix(ui): show empty status as placeholder instead of as status

--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -663,7 +663,7 @@
                  <property name="accessibleDescription">
                   <string>Set your status message that will be shown to others</string>
                  </property>
-                 <property name="text">
+                 <property name="placeholderText">
                   <string>Your status</string>
                  </property>
                  <property name="textFormat">
