style: edit color for update available in dark theme (fix #5717)

--- a/themes/dark/tooliconsZone/tooliconsZone.css
+++ b/themes/dark/tooliconsZone/tooliconsZone.css
@@ -6,7 +6,7 @@ QPushButton[update-available=true]
 
 QPushButton:hover[update-available=true]
 {
-    background-color: #2b9e1c;
+    background-color: #19780b;
     border: none;
 }
 
