--- a/themes/dark/window/general.css
+++ b/themes/dark/window/general.css
@@ -165,12 +165,12 @@ QScrollBar:vertical
 /* using last is a bit of a hack, but QTabBar otherwise doesn't allow selecting single tabs */
 QTabBar::tab:last:!selected[update-available=true]
 {
-    background-color: #80c580;
+    background-color: #115508;
 }
 
 QPushButton#updateAvailableButton
 {
-    background-color: #21da21;
+    background-color: #115508;
 }
 
 QScrollBar::handle:vertical
